# typeid

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  modules.rst  typeid.rst  typeid.sqla.rst
tests/: test_generation.py
typeid/: __init__.py  sqla.py
